Update meter and collection service
